	PR optimization/12142 	* cse.c (count_reg_usage): In a SET with a REG SET_DEST, count the 	uses of the register in the SET_SRC.  Remove unnecessary argument. 	* pa.c (legitimize_pic_address): Before reload, use a scratch register 	for the intermediate result in loading the address of a SYMBOL_REF. 	Set the MEM_NOTRAP_P flag for the MEM.  Add a REG_EQUAL to the insn 	which loads the SYMBOL_REF address.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@72234 138bc75d-0d04-0410-961f-82ee72b054a4